# codexU

./: .gitignore  README.en.md  README.md  README.windows.md
Sources/CodexUsageWidget.Windows/: Program.cs
codexU-qml/: .gitignore  CMakeLists.txt
codexU-qml/scripts/: build.ps1
codexU-qml/src/: main.cpp
codexU-qml/src/app/: CodexDataProvider.cpp  CodexDataProvider.h  DataSourceInterface.h  FormatUtils.cpp  FormatUtils.h  MockDataSource.cpp  MockDataSource.h  Models.h  RealDataSource.cpp  RealDataSource.h  TaskListModel.cpp  TaskListModel.h
codexU-qml/src/platform/: WindowHelper.cpp  WindowHelper.h
codexU-qml/src/qml/: Main.qml  Theme.js
codexU-qml/src/qml/components/: GlassCard.qml  HeaderBar.qml  PillButton.qml  QuotaRings.qml  RoundedProgressBar.qml  StatusFooter.qml  TaskBoard.qml  TaskCard.qml  TaskColumn.qml  TokenCard.qml  TokenSummaryCards.qml  ValueProgressCard.qml
scripts/: build-windows.ps1
